# iBoot-IDA

./: CONTRIBUTING.md  README.md  ida_ibootloader.py  ilstrap.json  istrap.json  pyproject.toml
.github/workflows/: codeql-analysis.yml
disassembler_api/: api.py  ida.py
ibootloader/: cache.py  iboot.py  iboot_encrypted.py  ida.py  loader.py  maps.py  securerom.py  structs.py  util.py
kimg4/: img4.py
loader/: ida_ibootloader.py
loader/src/disassembler_api/: ida.py
loader/src/iboot_emu/: README.md  emulator.py
loader/src/ibootloader/: securerom.py
loader/src/kimg4/: img4.py
loaders/: ida_ibootloader.py
plugin/: ida_ibootplugin.py
plugin/src/ibootplugin/: sysregs.py  sysregs_dat.py
src/: coprocessor.py  finder.py  ida_ibootloader.py  ida_ibootplugin.py  sephelper.py
src/disassembler_api/: README.md  api.py  ida.py
src/iboot_emu/: README.md  emulator.py  securerom.py
src/ibootloader/: cache.py  iboot.py  iboot_encrypted.py  loader.py  maps.py  securerom.py  structs.py  sysregs.py
src/ibootplugin/: sysregs.py  sysregs_dat.py
src/kimg4/: asn1.py  img4.py
src/pyaes/: __init__.py  aes.py  blockfeeder.py  util.py
