[tool.poetry]
name = "iboot-ida"
version = "0.1.0"
description = "iBoot / SecureROM / SEPROM plugin for IDA"
license = "GPL"

authors = [
    "KritantaDev <KritantaDevelopment@gmail.com>",
    "Yui <yunistar@icloud.com>",
    "Rick Mark <rickmark@outlook.com>"
]

[tool.poetry.dependencies]
python = "^3.9"
ilstrap = "^0.3.0"
unicorn = "^1.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"